# ramzan-coding-nights

./: .gitmodules  README.md
01-cli-todo/: README.md  main.py  pyproject.toml
02-unit-converter/: README.md  pyproject.toml
02-unit-converter/.streamlit/: config.toml
02-unit-converter/src/: app.py  style.py  units.py
03-password-generator/: README.md  pyproject.toml
03-password-generator/.streamlit/: config.toml
03-password-generator/src/: app.py  style.py  utils.py
04-simple-api/: README.md  pyproject.toml  vercel.json
04-simple-api/src/: data.py  main.py
05-money-making-machine/: README.md  pyproject.toml
05-money-making-machine/.streamlit/: config.toml
05-money-making-machine/src/: app.py  utils.py
06-time-zone-app/: README.md  pyproject.toml
06-time-zone-app/.streamlit/: config.toml
06-time-zone-app/src/: app.py  styles.py
07-mode-tracker/: README.md  pyproject.toml
07-mode-tracker/src/: app.py  mood-log.csv  style.py  (+1 more)
08-quiz-app/: README.md  pyproject.toml
09-calculator/: README.md  pyproject.toml  requirements.txt
10-personal-library-manager/: README.md  main.py
11-random-jokes-generator/: README.md  pyproject.toml
12-simple-chatbot/: Dockerfile  README.md  pyproject.toml
12-simple-chatbot/.chainlit/: config.toml
12-simple-chatbot/src/: main.py
13-qa-chatbot/: LICENSE  README.md  pyproject.toml
14-stateful-chatbot/: .env.example  README.md  chainlit.yaml  pyproject.toml
14-stateful-chatbot/.chainlit/: config.toml
14-stateful-chatbot/src/: main.py
15-greeting-agent/: .gitignore  README.md  pyproject.toml
(+13 files in other folders)
